--- a/Readme.textile
+++ b/Readme.textile
@@ -254,8 +254,7 @@ pre. <!DOCTYPE html>
 h4. user_mailer/invite.text.erb -- plain text template
 
 pre. Welcome, 
-<%= @user.login.capitalize %> (<%= @user.email %>) has invited you to join has 
-invited you to join this web site.
+<%= @user.login.capitalize %> (<%= @user.email %>) has invited you to join this web site.
 To sign up or for more information go to <%= @url %>. 	
 Thanks,
 The Web
